# twApp

./: App.cpp  App.hpp  CMakeLists.txt  LICENSE  README.md  graph.cpp  graph.hpp  main.cpp  partitionRefinement.cpp
